gitops/clusters/oci-a1/gaegaeting-dev/kafka/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gaegaeting-dev-kafka
  annotations:
    argocd.argoproj.io/sync-wave: '-40'
