gitops/clusters/oci-a1/gaegaeting-dev/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: gaegaeting-dev-kafka
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: gaegaeting-kafka
  ports:
  - name: broker
    port: 9092
  - name: controller
    port: 9093
