gitops/clusters/oci-a1/gaegaeting-dev/kafka/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-kafka-only
  namespace: gaegaeting-dev-kafka
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: match
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev-kafka
    ports:
    - port: 9092
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev-kafka
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gaegaeting-kafka
    ports:
    - port: 9093
      protocol: TCP
